# ching-tech-os-skillhub

./: .gitignore  LICENSE  QA-REPORT.md  README.md  index.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: __init__.py  client.py  installer.py  lockfile.py  models.py
docs/: architecture.md  ctos-integration.md  index.html  migration-from-clawhub.md  skill-format.md
releases/: sha.txt
schemas/: skill.schema.json
scripts/: pack_skill.py  validate_skill.py
server/: __init__.py  main.py  models.py  routes.py
skills/erpnext/: SKILL.md  run.sh
skills/erpnext-mcp/: SKILL.md  run.py
skills/erpnext-mcp/src/erpnext_mcp/: __init__.py  client.py  server.py
skills/erpnext/scripts/: check_connection.sh  check_install.sh  upload_file_from_url.sh
skills/example-skill/: SKILL.md  run.py
skills/md2doc/: SKILL.md
skills/md2doc/scripts/: convert.sh  install.sh
skills/md2ppt/: SKILL.md
skills/md2ppt/scripts/: convert.sh  install.sh
skills/nano-banana-pro/: SKILL.md
skills/nanobanana/: SKILL.md
skills/nanobanana-mcp/: SKILL.md
skills/nanobanana/scripts/: run.py
skills/pr-reviewer/: SKILL.md  _meta.json
skills/pr-reviewer/.clawhub/: origin.json
templates/: SKILL.md  skill-config.yaml.example
tests/: test_client.py  test_index.py  test_pack.py  test_schema.py  test_security.py
